--- a/package.json
+++ b/package.json
@@ -10,7 +10,20 @@
     "start": "next start",
     "test": "npm run type-check",
     "type-check": "tsc --noEmit",
-    "pretty": "npx prettier --write '**/*.{tsx,ts,js,jsx,json,css,scss,md}'"
+    "pretty": "npx prettier --write '**/*.{tsx,ts,js,jsx,json,css,scss,md}'",
+    "lint:precommit": "echo \"No precommit linting yet\" && exit 0",
+    "test:precommit": "npm test"
+  },
+  "lint-staged": {
+    "**/*.{tsx,ts,js,jsx,json,css,scss,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && npm run lint:precommit && npm run test:precommit"
+    }
   },
   "engines": {
     "node": "^10.15.0"
@@ -30,6 +43,8 @@
     "@types/next": "^7.0.6",
     "@types/react": "^16.7.20",
     "@zeit/next-typescript": "^1.1.1",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
     "prettier": "1.16.0",
     "typescript": "^3.2.4"
   }
