--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "test": "npm run type-check",
-    "type-check": "tsc --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "ts:check": "tsc --noEmit",
     "pretty": "npx prettier --write '**/*.{tsx,ts,js,jsx,json,css,scss,md}'",
     "lint:precommit": "echo \"No precommit linting yet\" && exit 0",
-    "test:precommit": "npm test"
+    "test:precommit": "npm run ts:check && npm test"
   },
   "lint-staged": {
     "**/*.{tsx,ts,js,jsx,json,css,scss,md}": [
@@ -40,12 +42,15 @@
     "react-dom": "16.8.0-alpha.1"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.13",
     "@types/next": "^7.0.6",
     "@types/react": "^16.7.20",
     "@zeit/next-typescript": "^1.1.1",
     "husky": "^1.3.1",
+    "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
     "prettier": "1.16.0",
+    "ts-jest": "^23.10.5",
     "typescript": "^3.2.4"
   }
 }
