--- a/package.json
+++ b/package.json
@@ -46,11 +46,14 @@
     "@types/next": "^7.0.6",
     "@types/react": "^16.7.20",
     "@zeit/next-typescript": "^1.1.1",
+    "babel-core": "^7.0.0-bridge",
+    "babel-jest": "^23.6.0",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
+    "jest-dom": "^3.0.0",
     "lint-staged": "^8.1.0",
     "prettier": "1.16.0",
-    "ts-jest": "^23.10.5",
+    "react-testing-library": "^5.4.4",
     "typescript": "^3.2.4"
   }
 }
