--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "",
   "repository": "https://github.com/topheman/nextjs-movie-browser",
   "scripts": {
-    "dev": "next",
+    "dev": "NODE_ENV=development nodemon server",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -39,13 +39,16 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "dotenv-expand": "^4.2.0",
+    "express": "^4.16.4",
     "next": "^7.0.2",
     "react": "16.8.0-alpha.1",
     "react-dom": "16.8.0-alpha.1"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "@types/jest": "^23.3.13",
     "@types/next": "^7.0.6",
+    "@types/node": "^10.12.18",
     "@types/react": "^16.7.20",
     "@zeit/next-typescript": "^1.1.1",
     "babel-core": "^7.0.0-bridge",
@@ -54,6 +57,7 @@
     "jest": "^23.6.0",
     "jest-dom": "^3.0.0",
     "lint-staged": "^8.1.0",
+    "nodemon": "^1.18.9",
     "prettier": "1.16.0",
     "react-testing-library": "^5.4.4",
     "typescript": "^3.2.4"
