--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^6.2.0",
     "dotenv-expand": "^4.2.0",
     "express": "^4.16.4",
+    "isomorphic-fetch": "^2.2.1",
     "next": "^7.0.2",
     "react": "16.8.0-alpha.1",
     "react-dom": "16.8.0-alpha.1"
