feat(http-client): setup client in TypeScript

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NEXTJS_APP_CLIENT_TITLE=NextJS Movie Browser
 NEXTJS_APP_CLIENT_TMDB_API_ROOT_URL=https://api.themoviedb.org/3
+NEXTJS_APP_CLIENT_TMDB_API_TIMEOUT=10000
+NEXTJS_APP_CLIENT_TMDB_API_CACHE_ENABLED=true
