--- a/package.json
+++ b/package.json
@@ -37,9 +37,13 @@
   "author": "Christophe Rosset <tophe@topheman.com> (http://labs.topheman.com/)",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
+    "axios-cache-adapter": "^2.2.1",
+    "axios-retry": "^3.1.2",
     "dotenv": "^6.2.0",
     "dotenv-expand": "^4.2.0",
     "express": "^4.16.4",
+    "invariant": "^2.2.4",
     "isomorphic-fetch": "^2.2.1",
     "next": "^7.0.2",
     "react": "16.8.0-alpha.1",
@@ -47,6 +51,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/invariant": "^2.2.29",
     "@types/jest": "^23.3.13",
     "@types/next": "^7.0.6",
     "@types/node": "^10.12.18",
