--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "invariant": "^2.2.4",
     "isomorphic-fetch": "^2.2.1",
     "next": "^7.0.2",
+    "next-i18next": "^0.21.0",
     "react": "16.8.0-alpha.1",
     "react-dom": "16.8.0-alpha.1"
   },
