--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "axios-retry": "^3.1.2",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
     "dotenv-expand": "^4.2.0",
     "express": "^4.16.4",
@@ -50,6 +51,7 @@
     "react-dom": "16.8.0-alpha.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/invariant": "^2.2.29",
     "@types/jest": "^23.3.13",
