--- a/package.json
+++ b/package.json
@@ -37,18 +37,21 @@
   "author": "Christophe Rosset <tophe@topheman.com> (http://labs.topheman.com/)",
   "license": "MIT",
   "dependencies": {
+    "@types/hoist-non-react-statics": "^3.0.1",
     "axios": "^0.18.0",
     "axios-retry": "^3.1.2",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
     "dotenv-expand": "^4.2.0",
     "express": "^4.16.4",
+    "hoist-non-react-statics": "^3.3.0",
     "invariant": "^2.2.4",
     "isomorphic-fetch": "^2.2.1",
     "next": "^7.0.2",
     "next-i18next": "^0.21.0",
     "react": "16.8.0-alpha.1",
-    "react-dom": "16.8.0-alpha.1"
+    "react-dom": "16.8.0-alpha.1",
+    "react-i18next": "9.0.9"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.1",
