--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "isomorphic-fetch": "^2.2.1",
     "next": "^7.0.2",
     "next-i18next": "^0.21.0",
-    "react": "16.8.0-alpha.1",
-    "react-dom": "16.8.0-alpha.1",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-i18next": "9.0.9"
   },
   "devDependencies": {
@@ -60,7 +60,7 @@
     "@types/jest": "^23.3.13",
     "@types/next": "^7.0.6",
     "@types/node": "^10.12.18",
-    "@types/react": "^16.7.20",
+    "@types/react": "^16.8.2",
     "@zeit/next-typescript": "^1.1.1",
     "babel-core": "^7.0.0-bridge",
     "babel-jest": "^23.6.0",
@@ -70,7 +70,7 @@
     "lint-staged": "^8.1.0",
     "nodemon": "^1.18.9",
     "prettier": "1.16.0",
-    "react-testing-library": "^5.4.4",
+    "react-testing-library": "^5.5.3",
     "typescript": "^3.2.4"
   }
 }
