--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,18 @@
 {
   "env": {
     "development": {
-      "presets": ["next/babel", "@zeit/next-typescript/babel"]
+      "presets": ["next/babel", "@zeit/next-typescript/babel"],
+      "plugins": [
+        ["@babel/plugin-proposal-decorators", { "legacy": true }],
+        ["@babel/plugin-proposal-class-properties", { "loose": true }]
+      ]
     },
     "production": {
-      "presets": ["next/babel", "@zeit/next-typescript/babel"]
+      "presets": ["next/babel", "@zeit/next-typescript/babel"],
+      "plugins": [
+        ["@babel/plugin-proposal-decorators", { "legacy": true }],
+        ["@babel/plugin-proposal-class-properties", { "loose": true }]
+      ]
     },
     "test": {
       "presets": [
@@ -17,6 +25,10 @@
           }
         ],
         "@zeit/next-typescript/babel"
+      ],
+      "plugins": [
+        ["@babel/plugin-proposal-decorators", { "legacy": true }],
+        ["@babel/plugin-proposal-class-properties", { "loose": true }]
       ]
     }
   }
