--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "hoist-non-react-statics": "^3.3.0",
     "invariant": "^2.2.4",
     "isomorphic-fetch": "^2.2.1",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
     "next": "^7.0.2",
     "next-i18next": "^0.21.0",
     "react": "^16.8.1",
@@ -54,6 +56,8 @@
     "react-i18next": "9.0.9"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/invariant": "^2.2.29",
