--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "esnext"
+    "target": "esnext",
+    "experimentalDecorators": true
   },
   "exclude": [
     "node_modules",
