feat(MetaTags): setup SEO meta tags (dynamically reacting to API content)

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
+NEXTJS_APP_CLIENT_BASE_PATH=
 NEXTJS_APP_CLIENT_TITLE=NextJS Movie Browser
-NEXTJS_APP_CLIENT_TMDB_API_ROOT_URL=https://api.themoviedb.org/3
+NEXTJS_APP_CLIENT_TMDB_IMAGE_CDN=https://image.tmdb.org
+NEXTJS_APP_CLIENT_TMDB_IMAGE_CDN_BASE_URL=${NEXTJS_APP_CLIENT_TMDB_IMAGE_CDN}/t/p
+NEXTJS_APP_CLIENT_TMDB_API=https://api.themoviedb.org
+NEXTJS_APP_CLIENT_TMDB_API_ROOT_URL=${NEXTJS_APP_CLIENT_TMDB_API}/3
 NEXTJS_APP_CLIENT_TMDB_API_TIMEOUT=10000
 NEXTJS_APP_CLIENT_TMDB_API_CACHE_ENABLED=true
+NEXTJS_APP_CLIENT_TWITTER_HANDLE=@topheman
