feat(TranslationsStore): fallback to proper english label when only code in provided

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "sourceMap": true,
     "strict": true,
     "target": "esnext",
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "resolveJsonModule": true
   },
   "exclude": [
     "node_modules",
