--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.16.0",
     "axios-retry": "^3.1.2",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
