--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^0.18.0",
     "axios-mock-adapter": "^1.16.0",
     "axios-retry": "^3.1.2",
+    "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
     "dotenv-expand": "^4.2.0",
@@ -59,6 +60,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@types/classnames": "^2.2.7",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/hoist-non-react-statics": "^3.0.1",
