--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon server",
     "build": "next build",
+    "heroku-postbuild": "next build",
     "start": "NODE_ENV=production node server",
     "test": "jest",
     "test:watch": "jest --watch",
