--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "build": "next build",
     "heroku-postbuild": "next build",
     "start": "NODE_ENV=production node server",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "npm-run-all --parallel --silent test:unit test:cypress",
+    "test:unit": "jest",
+    "test:unit:watch": "jest --watch",
+    "test:unit:coverage": "jest --coverage",
+    "test:cypress": "npm run build && npm run cy:start-server-and-test",
+    "test:cypress:dev": "npm-run-all --parallel --race dev cy:open",
+    "test:cypress:debug-build": "npm run build && cross-env CYPRESS_LAUNCH_MODE=debug-build npm-run-all --parallel --race start cy:open",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:start-server-and-test": "npx start-server-and-test start :3000 cy:run",
     "ts:check": "tsc --noEmit",
     "pretty": "npx prettier --write '**/*.{tsx,ts,js,jsx,json,css,scss,md}'",
     "lint:precommit": "echo \"No precommit linting yet\" && exit 0",
@@ -76,13 +83,18 @@
     "@zeit/next-typescript": "^1.1.1",
     "babel-core": "^7.0.0-bridge",
     "babel-jest": "^23.6.0",
+    "cross-env": "^5.2.0",
+    "cypress": "^3.1.5",
+    "cypress-testing-library": "^2.3.6",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
     "jest-dom": "^3.0.0",
     "lint-staged": "^8.1.0",
     "nodemon": "^1.18.9",
+    "npm-run-all": "^4.1.5",
     "prettier": "1.16.0",
     "react-testing-library": "^5.5.3",
+    "start-server-and-test": "^1.7.11",
     "typescript": "^3.2.4"
   }
 }
