--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@cypress/webpack-preprocessor": "^4.0.3",
     "@types/classnames": "^2.2.7",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
