chore(tslint): setup tslint-config-airbnb and customize rules
- Also use tslint to lint js files (in vscode), with https://marketplace.visualstudio.com/items?itemName=ms-vscode.vscode-typescript-tslint-plugin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "editor.formatOnSave": true,
-  "typescript.tsdk": "node_modules/typescript/lib"
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "tslint.jsEnable": true // to lint .js in vscode with https://marketplace.visualstudio.com/items?itemName=ms-vscode.vscode-typescript-tslint-plugin
 }
