feat(analytics): setup google analytics
https://www.garymeehan.ie/blog/google-analytics-nextjs-and-prismic

--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ NEXTJS_APP_CLIENT_TMDB_API_ROOT_URL=${NEXTJS_APP_CLIENT_TMDB_API}/3
 NEXTJS_APP_CLIENT_TMDB_API_TIMEOUT=10000
 NEXTJS_APP_CLIENT_TMDB_API_CACHE_ENABLED=true
 NEXTJS_APP_CLIENT_TWITTER_HANDLE=@topheman
+NEXTJS_APP_CLIENT_GOOGLE_ANALYTICS_ID=UA-49585429-4
