--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "next-i18next": "^0.21.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-i18next": "9.0.9"
+    "react-i18next": "9.0.9",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.0",
@@ -92,9 +93,11 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
+    "@types/styled-components": "^4.1.12",
     "@zeit/next-typescript": "^1.1.1",
     "babel-core": "^7.0.0-bridge",
     "babel-jest": "^23.6.0",
+    "babel-plugin-styled-components": "^1.10.0",
     "cross-env": "^5.2.0",
     "cypress": "^3.1.5",
     "cypress-testing-library": "^2.3.6",
