--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-i18next": "9.0.9",
+    "react-sidebar": "^3.0.2",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
@@ -93,6 +94,7 @@
     "@types/node": "^10.12.18",
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
+    "@types/react-sidebar": "^3.0.0",
     "@types/styled-components": "^4.1.12",
     "@zeit/next-typescript": "^1.1.1",
     "babel-core": "^7.0.0-bridge",
