chore(travis): setup travis with Cypress recording
http://dev.topheman.com/cypress-io-advanced-setup/

--- a/package.json
+++ b/package.json
@@ -23,16 +23,21 @@
     "heroku-postbuild": "next build",
     "start": "cross-env NODE_ENV=production node server",
     "test": "npm-run-all --parallel --silent test:unit test:cypress",
+    "test:travis": "npm-run-all --parallel --silent test:unit test:cypress:travis",
+    "test:travis:pr": "npm test",
     "test:unit": "jest",
     "test:unit:watch": "jest --watch",
     "test:unit:coverage": "jest --coverage",
     "test:unit:verbose": "jest --verbose",
     "test:cypress": "npm run build && cross-env STRIP_SERVER_CONSOLE=true npm run cy:start-server-and-test",
+    "test:cypress:travis": "npm run build && cross-env STRIP_SERVER_CONSOLE=true npm run cy:start-server-and-test:travis",
     "test:cypress:dev": "npm-run-all --parallel --race dev cy:open",
     "test:cypress:debug-build": "npm run build && cross-env CYPRESS_LAUNCH_MODE=debug-build npm-run-all --parallel --race start cy:open",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
+    "cy:run:travis": "npx cypress run --record --config video=true",
     "cy:start-server-and-test": "npx start-server-and-test start :3000 cy:run",
+    "cy:start-server-and-test:travis": "npx start-server-and-test start :3000 cy:run:travis",
     "ts:check": "tsc --noEmit",
     "lint": "npx tslint --project tsconfig.json -c tslint.json '**/*.{js,ts,tsx}'",
     "pretty": "npx prettier --write '**/*.{tsx,ts,js,jsx,json,css,scss,md}'",
