--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "cross-env": "^5.2.0",
     "cypress": "^3.1.5",
+    "cypress-plugin-tab": "^1.0.0",
     "cypress-testing-library": "^2.3.6",
     "generate-changelog": "^1.7.1",
     "github-url-from-git": "^1.5.0",
