--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     }
   },
   "engines": {
-    "node": "^14.0.0"
+    "node": "14.x"
   },
   "author": "Christophe Rosset <tophe@topheman.com> (http://labs.topheman.com/)",
   "dependencies": {
