--- a/package.json
+++ b/package.json
@@ -123,5 +123,8 @@
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.2.4"
+  },
+  "resolutions": {
+    "fsevents": "1.2.9"
   }
 }
